--- a/d/index.html
+++ b/d/index.html
@@ -81,7 +81,7 @@
 					<form>
 						<div class="row uniform 50%">
 							<div class="8u 12u(mobilep)">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
+								<input id="inputEmail" type="email" name="email" id="email" placeholder="Email Address" />
 							</div>
 							<div class="4u 12u(mobilep)">
 								<input id="emailSubmit" type="submit" value="Sign Up" class="fit" />
